2008-10-16  Alexander Monakov  <amonakov@ispras.ru>

	PR target/37381
	* gcc.c-torture/compile/pr37381.c: New test.

2008-10-16  Joseph Myers  <joseph@codesourcery.com>

	PR c/33192
	* gcc.dg/imag-1.c: New test.

2008-10-16  Daniel Kraft  <d@domob.eu>

	* gfortran.dg/elemental_intrinsic_1.f03: New test.

2008-10-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37664
	* gcc.c-torture/compile/pr37664.c: New test.

2008-10-16  Joseph Myers  <joseph@codesourcery.com>

	PR middle-end/37418
	* gcc.c-torture/compile/pr37418-1.c,
	gcc.c-torture/compile/pr37418-2.c,
	gcc.c-torture/compile/pr37418-3.c,
	gcc.c-torture/compile/pr37418-4.c: New tests.

2008-10-15  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/34670
	* gfortran.dg/reshape_3.f90:  New test.
	* gfortran.dg/reshape_4.f90:  New test.
	* gfortran.dg/reshape_order_1.f90:  Use correct shape.
	* gfortran.dg/reshape_order_2.f90:  Likewise.
	* gfortran.dg/reshape_order_3.f90:  Likewise.
	* gfortran.dg/reshape_order_4.f90:  Likewise.

2008-10-15  Jan Sjodin  <jan.sjodin@amd.com>
    	    Harsha Jagasia  <harsha.jagasia@amd.com>

	PR tree-optimization/37485
	* gcc.dg/graphite/pr37485.c: New.

2008-10-15  Sebastian Pop  <sebastian.pop@amd.com>
    	    Harsha Jagasia  <harsha.jagasia@amd.com>

	PR tree-optimization/37828
	* testsuite/gcc.dg/graphite/pr37828.c: New.

2008-10-15  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/37686
	* testsuite/gcc.dg/tree-ssa/pr37686.c: New.

2008-10-15  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/36881
	* gcc.dg/tree-ssa/pr36881.c: New test.

2008-10-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/37819
	* g++.dg/expr/bitfield11.C: New test.

2008-10-14  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/37650
	* g++.dg/template/crash83.C: New.

2008-10-14  Douglas Gregor  <doug.gregor@gmail.com>

       PR c++/37553
       * g++.dg/ext/alias-canon2.C: New.

2008-10-13  Jerry DeLisle  <jvdelisle@gcc.gnu.org

	PR libfortran/37083