@@ -11,12 +11,12 @@
 /* { dg-require-dll "" } */
 
 __declspec (dllimport) int foo1 ();
-__declspec (dllexport) int foo1 ();	/* { dg-message "note: previous dllimport ignored" } */
+__declspec (dllexport) int foo1 ();	/* { dg-warning "previous dllimport ignored" } */
 __declspec (dllexport) int foo2 ();
 __declspec (dllimport) int foo2 ();	/* { dg-warning "dllimport ignored" } */
 
 __declspec (dllimport) int bar1;
-__declspec (dllexport) int bar1;	/* { dg-message "note: previous dllimport ignored" } */
+__declspec (dllexport) int bar1;	/* { dg-warning "previous dllimport ignored" } */
 
 __declspec (dllexport) int bar2;
 __declspec (dllimport) int bar2;	/* { dg-warning "dllimport ignored" } */
